- fixes the direction of the collapsed resource tab - changes the logic for whether panels are shown or callapsed from boolean to numeric

--- a/src/components/navigation/collapsed-resources-tab.scss
+++ b/src/components/navigation/collapsed-resources-tab.scss
@@ -75,11 +75,11 @@
   }
 
   .collapsed-tab-label {
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
     font-size: 14px;
     margin: 20px 7px;
-    width: 50px;
+    height: max-content;
   }
   .expand-left-indicator {
     position: relative;
